<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.abhinavjhanwar.portfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nanodegree_apps"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"
        android:layout_marginTop="12dp"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app1"
        android:id="@+id/button"
        android:tag="popular movies"
        android:background="@color/pink"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:onClick="sendMessage"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app2"
        android:id="@+id/button1"
        android:tag="stock hawk"
        android:background="@color/pink"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:onClick="sendMessage"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app3"
        android:id="@+id/button2"
        android:tag="build it bigger"
        android:background="@color/pink"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:onClick="sendMessage"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app4"
        android:id="@+id/button3"
        android:tag="make your app material"
        android:background="@color/pink"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:onClick="sendMessage"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app5"
        android:id="@+id/button4"
        android:tag="go ubiquitous"
        android:background="@color/pink"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:onClick="sendMessage"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app6"
        android:id="@+id/button5"
        android:tag="capstone"
        android:background="@color/pink"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:onClick="sendMessage"/>

</RelativeLayout>
